# DogEngine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  Vulkan.cpp  gltfScene.drawio  imgui.ini  render.drawio  run.ps1  test  vktu.cpp
.cache/clangd/index/: Camera.cpp.2C6EC69EE57F8201.idx  Camera.h.9908458D8E4DBF05.idx  DataStructures.h.D26E3EFF0F1927AC.idx  DebugMessanger.cpp.51CF7313D1E83FC7.idx  DebugMessanger.h.45CE21582D30BCAD.idx  Mesh&Model.cpp.781024F1F92C4993.idx  Mesh&Model.h.B11FCE78FF327AC1.idx  Renderer.cpp.D21F5FEAFAC78F4F.idx  Renderer.h.5FED20D2AA20D464.idx  Utilities.cpp.E09A7C12D356426B.idx  Utilities.h.1BD85D02400BA8C2.idx  Vertex.cpp.7EAEE210E5495254.idx  Vertex.h.246D7FC9C94144C2.idx  Vulkan.cpp.ECAE1880674D2252.idx  _fixes.hpp.674547ADE1AF4442.idx  _vectorize.hpp.445E447C31F7E39F.idx  allocateObject.cpp.583C9149A866C50F.idx  allocateObject.h.BFB6023D764CD3BD.idx  common.h.E5AE2359308A262E.idx  common.hpp.4594F6280CF77D9A.idx  compute_common.hpp.6DE4C6FBA0D4C5B1.idx  compute_vector_relational.hpp.F95DCD07546909E6.idx  constants.hpp.C3A76AE7B4AEA1BE.idx  constants.inl.25CB2CBBD766B96C.idx  context.c.4830244FCF2CAA09.idx  egl_context.c.A69D5E49BC7F785E.idx  exponential.hpp.C2B70EBBF85514B5.idx  func_common.inl.4E98372492431744.idx  func_exponential.inl.61560BB6FAED4779.idx  func_geometric.inl.897272600F2708D7.idx  func_integer.inl.AB2554E3F5E5CCE8.idx  func_matrix.inl.9EE037827B7CCF23.idx  func_packing.inl.8EF70B9E9D37653D.idx  func_trigonometric.inl.A2672F8DC0E20F27.idx  func_vector_relational.inl.FD02DE14105D1265.idx  fwd.hpp.8E4EE7C91D41B03C.idx  geometric.hpp.64C7404BCAADAB72.idx  glfw3.h.4EF1F5158A21AC21.idx  glm.hpp.F1CCFD6951E73055.idx  init.c.2C240F1B36EE5E77.idx  (+156 more)
dogEngine/: CMakeLists.txt  Camera.cpp  Camera.h  CommandBuffer.cpp  CommandBuffer.h  DebugMessanger.cpp  DebugMessanger.h  DeviceContext.cpp  DeviceContext.h  ModelLoader.cpp  ModelLoader.h  Renderer.cpp  Renderer.h  ResourcePool.hpp  Vertex.cpp  Vertex.h  dgAssert.h  dgGeometry.h  dgLog.hpp  dgMaterial.cpp  dgMaterial.h  dgRayTraceBuilder.cpp  dgRayTraceBuilder.h  dgResource.cpp  dgResource.h  dgSceneGraph.cpp  dgSceneGraph.h  dgShaderCompiler.cpp  dgShaderCompiler.h  dgShaderCompiler.hpp  dgUtil.hpp  dgpch.h  dgplatform.h  gpuResource.cpp  gpuResource.hpp  headerOnly.cpp  vk_mem_alloc.h
dogEngine/GUI/: ComponentViewer.cpp  ComponentViewer.h  GUI.cpp  GUI.h
dogEngine/GUI/Component/: GameViewer.cpp  GameViewer.h  MainBar.cpp  MainBar.h  MaterialViewer.cpp  MaterialViewer.h  SceneHierachyViewer.cpp  SceneHierachyViewer.h
dogEngine/GUI/imguiBase/: imconfig.h  imgui_impl_vulkan.cpp
dogEngine/renderdoc/: renderdoc_app.h
include/: Camera.h  CommandHandler.h  DataStructures.h  DebugMessanger.h  DescriptorsHandler.h  GUI.h  GraphicsPipeline.h  Light.h  Mesh&Model.h  MeshModel.h  RenderPassHandler.h  SwapChainHandler.h  Utilities.h  Vertex.h  allocateObject.h  common.h  gpuResource.h  platform.h  vkRenderer.h
models/BoomBoxWithAxes/: BoomBoxWithAxes.gltf
models/Camera_01_2k/: Camera_01_2k.gltf
models/MetalRoughSpheres/: MetalRoughSpheres.gltf
models/scene/: license.txt  scene.gltf
shaders/: compile.bat  frag.frag  frag.spv  fspbr.frag  fsskybox.frag  irra.frag  irrafrag.spv  lut.frag  lut.vert  lutfrag.spv  pbrfrag.spv  pbrvert.spv  prefilter.frag  prefilterfrag.spv  rayClosestHit.rchit  rayGen.rgen  rayMiss.rmiss  second.frag  second.vert  second_frag.spv  second_shader.frag  second_shader.vert  second_vert.spv  shaderDataStructure.h  shaderUtil.glsl  shader_base.frag  shader_base.vert  skyfrag.spv  skyvert.spv  vert.spv  vspbr.vert  vsskybox.vert
src/: CMakeLists.txt  Camera.cpp  Camera.h  CommandHandler.cpp  DebugMessanger.cpp  DescriptorsHandler.cpp  GUI.cpp  GraphicsPipeline.cpp  Light.cpp  Mesh&Model.cpp  Mesh&Model.h  MeshModel.cpp  RenderPassHandler.cpp  SwapChainHandler.cpp  Utilities.cpp  Vertex.cpp  Vertex.h  allocateObject.cpp  allocateObject.h  common.h  imgui.cpp  imgui_demo.cpp  imgui_impl_glfw.cpp  imgui_impl_vulkan.cpp  vkRenderer.cpp  vk_mem_allocator.cpp
src/GUI/: GUI.cpp
src/GUI/imguiBase/: imgui_draw.cpp  imgui_tables.cpp  imgui_widgets.cpp
